refactor: CascadeType doing what they do best